Issue #2: working on plotting things to pdf

--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,24 @@
       <artifactId>base</artifactId>
       <version>1.0</version>
     </dependency>
+    
+	  <dependency>
+      <groupId>com.jsbase</groupId>
+      <artifactId>graphics</artifactId>
+      <version>1.0</version>
+    </dependency>
 
     <dependency>
       <groupId>com.jsbase</groupId>
       <artifactId>testutil</artifactId>
       <version>1.0</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>de.erichseifert.vectorgraphics2d</groupId>
+      <artifactId>VectorGraphics2D</artifactId>
+      <version>0.13</version>
     </dependency>
 
     <!--  Custom dependencies end   ~}              -->
